# Discord-

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  SourceGroupsFromPaths.cmake  lsan.supp
discord/: CMakeLists.txt
discord/discord/: CMakeLists.txt  auth.cpp  client.cpp  client.hpp  exception.cpp  gateway.hpp  image.hpp  opcodes.hpp  types.hpp  urls.hpp
discord/discord/classes/: emoji.hpp  guild.hpp  userguildsettings.hpp  usersettings.hpp
discord/discord/private/: activity.cpp  channel.cpp  emoji.cpp  guild.cpp  message.cpp  presence.cpp  relationship.cpp  user.cpp  userguildsettings.cpp  usersettings.cpp
discord/discord/utils/: json.hpp
resource/: resource.qrc
source/: authorizationview.cpp  authorizationview.hpp  discordclient.cpp  discordclient.hpp  driftuistyle.cpp  driftuistyle.h  loginwindow.cpp  loginwindow.hpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  servericonwidget.cpp  servericonwidget.hpp  tooltip.cpp  tooltip.hpp
source/discord/: CMakeLists.txt  activity.cpp  activity.hpp  apilinks.cpp  apilinks.hpp  auth.cpp  auth.hpp  authorizationdata.cpp  authorizationdata.hpp  cache.cpp  cache.hpp  channel.cpp  channel.hpp  client.cpp  client.hpp  exception.hpp  gateway.cpp  guild.cpp  guild.hpp  image.cpp  image.hpp  message.cpp  message.hpp  opcodes.hpp  presence.cpp  presence.hpp  relationship.cpp  relationship.hpp  types.hpp  urls.cpp  urls.hpp  user.cpp  user.hpp
source/discord/data/: userguildsettings.cpp  userguildsettings.hpp  usersettings.cpp  usersettings.hpp
source/widgets/: CMakeLists.txt  guildicon.cpp  guildicon.hpp  guildicon.ui  guildslist.cpp  guildslist.hpp  guildslist.ui
